turtleart.lessons.turtleart.Main.Flower2.scala.error
Source:13: error: not found: value droiet
		droiet(45)
                ^